changed title of the page to name

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Mouse Mousekewitz
+title: Sandra Hantsch
 logo: /assets/img/me.jpg
-description: This is Mouse Mousekewitz' homepage.
+description: This is not Mouse Mousekewitz' homepage.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
