changed CV link to CV file in assets and adjusted config and index files

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sandra Hantsch
-logo: /assets/img/me.jpg
+logo: /assets/img/picture.jpg
 description: This is not Mouse Mousekewitz' homepage.
 show_downloads: true
 google_analytics:
